fixed off center on navbar

--- a/amyintech/src/TopNavBar.css
+++ b/amyintech/src/TopNavBar.css
@@ -6,12 +6,12 @@ body, html, ul, li, a {
   text-decoration: none;
 }
 
-.navbar {
+.navbar-container {
   display: flex;
-  justify-content: center;
+  justify-content: center; 
   align-items: center;
-  padding: 1em 2em;
-  color: white;
+  width: 100%; 
+  height: 100px;
 }
 
 .navbar-links {
